# umane-datalake

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
codigo/: config.py  monday-client.py  monday_client.py  pipeline.py  s3_client.py  transformacao.py  transformacao_ouro.py
src/umane_datalake/: config.py  monday_client.py  pipeline.py  s3_client.py  transformacao.py  transformacao_ouro.py
